--- a/index.html
+++ b/index.html
@@ -109,7 +109,21 @@
           <p><strong>Решение:</strong> интегрировали бота с Google Sheets для автоматической выгрузки вопросов; реализовали алгоритм проверки ответов, учитывающий особенности русского языка и допускающий вариации; добавили ИИ‑ассистента, который общается со студентами, задаёт дополнительные вопросы и помогает глубже понять материал.</p>
           <p><strong>Результат:</strong> ученики получают персонализированные задания, а репетитор экономит время на подборе вопросов и проверке ответов. ИИ‑ассистент делает процесс обучения более интерактивным.</p>
         `
-      }
+      },
+      {
+        title: "Чат‑бот для поиска кандидатов",
+        shortDesc: "Автоматический поиск и фильтрация вакансий на каналах и биржах.",
+        image: "https://images.unsplash.com/photo-1531498568679-909db59a78ba?auto=format&fit=crop&w=800&q=60",
+        fullHtml: `
+          <p><strong>Цель проекта:</strong> Автоматизировать поиск и отбор кандидатов на вакансии из различных Telegram‑каналов и фриланс‑площадок, сократив время HR‑специалистов на ручной просмотр объявлений.</p>
+          <p><strong>Реализация:</strong> Технологии: Python, Telethon, SQLite. Инструменты: Telegram API, регулярные выражения, фильтрация данных.</p>
+          <p><strong>Архитектура:</strong> Бот на основе Telethon подключается к Telegram‑каналам, указанным заказчиком. В режиме реального времени парсит новые публикации. Сохраняет данные в базу SQLite с последующей фильтрацией и проверкой на дубликаты. Результаты автоматически отправляются в рабочую Telegram‑группу HR‑отдела.</p>
+          <p><strong>Функциональность:</strong> Мониторинг заданных каналов и чатов; фильтрация по ключевым словам; исключение дублей и нерелевантных объявлений; автоматическая рассылка найденных объявлений HR‑команде; настройка списков каналов и фильтров.</p>
+          <p><strong>Результат:</strong> Сокращение времени на поиск кандидатов более чем в 3 раза; устранение дубликатов и «мусорных» объявлений; повышение скорости реакции HR на свежие вакансии; возможность масштабирования под новые каналы и запросы.</p>
+          <p><strong>Преимущества для заказчика:</strong> Реальное время обновления информации; простота использования (вся работа — внутри Telegram); минимальные затраты на поддержку.</p>
+        `
+    }
+
     ];
 
     const listEl = document.getElementById('caseList');
