--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       {
         title: "Чат‑бот Платный клуб",
         shortDesc: "Платный вход и рекуррентные платежи.",
+        image: "https://github.com/AlekseiMerzlikin/my_bot/blob/main/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8%20%D0%BA%20%D0%BA%D0%B5%D0%B9%D1%81%D0%B0%D0%BC/%D0%BA%D0%B5%D0%B9%D1%81%201/718fd7e0-6560-55ff-8%C2%A0%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png.webp",
         image: "https://github.com/AlekseiMerzlikin/my_bot/blob/main/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8%20%D0%BA%20%D0%BA%D0%B5%D0%B9%D1%81%D0%B0%D0%BC/%D0%BA%D0%B5%D0%B9%D1%81%201/259b0960-3967-51f9-a%C2%A0%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png.webp?raw=true",
         fullHtml: `
           <p><strong>Задача:</strong> автоматизировать оплату клуба и направлять старых участников в воронку, учитывая дату окончания подписки.</p>
