--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       {
         title: "Чат‑бот для поиска кандидатов",
         shortDesc: "Автоматический поиск и фильтрация вакансий на каналах и биржах.",
-        image: "https://images.unsplash.com/photo-1531498568679-909db59a78ba?auto=format&fit=crop&w=800&q=60",
+        image: "https://github.com/AlekseiMerzlikin/my_bot/blob/main/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8%20%D0%BA%20%D0%BA%D0%B5%D0%B9%D1%81%D0%B0%D0%BC/8ec0c55e-796c-4d69-8f8f-41e23ab69cde",
         fullHtml: `
           <p><strong>Цель проекта:</strong> Автоматизировать поиск и отбор кандидатов на вакансии из различных Telegram‑каналов и фриланс‑площадок, сократив время HR‑специалистов на ручной просмотр объявлений.</p>
           <p><strong>Реализация:</strong> Технологии: Python, Telethon, SQLite. Инструменты: Telegram API, регулярные выражения, фильтрация данных.</p>
